# Connect-to-QQQ100-index-agent

./: CHANGELOG.md  README.md  RELEASE_NOTES_v0.1.0.md  example.env  main.py  pyproject.toml  test_context.py
config/: agent.yaml  task.yaml
src/: crew.py
src/db/: config.py
src/db/repositories/: tg_user_repo.py
src/db/services/: user_service.py
src/db/tg_user/: __init__.py  tg_user.py  tg_user.sql  tg_user_repo.py  user_service.py
src/test/: test_callback.py  test_simple_callback.py  test_stream.py  test_task_callback.py  test_tg_user.py
src/tools/: finance_tool.py  search_tool.py
src/utils/: auth.py  notifier.py  scheduler.py
